--- a/Resources/Resource.resx
+++ b/Resources/Resource.resx
@@ -142,7 +142,7 @@
     <value>تاریخ تولید</value>
   </data>
   <data name="ShortDescription" xml:space="preserve">
-    <value>توضیح</value>
+    <value>توضیحات مختصر</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>تیتر</value>
@@ -155,5 +155,77 @@
   </data>
   <data name="UnitName" xml:space="preserve">
     <value>نام واحد</value>
+  </data>
+  <data name="Inventory" xml:space="preserve">
+    <value>موجودی</value>
+  </data>
+  <data name="IsExist" xml:space="preserve">
+    <value>موجود است</value>
+  </data>
+  <data name="PriceDate" xml:space="preserve">
+    <value>تاریخ قیمت گذاری</value>
+  </data>
+  <data name="ProductId" xml:space="preserve">
+    <value>نام محصول</value>
+  </data>
+  <data name="UnitPrice" xml:space="preserve">
+    <value>قیمت</value>
+  </data>
+  <data name="DisplayPriority" xml:space="preserve">
+    <value>اولویت نمایش</value>
+  </data>
+  <data name="Pictures" xml:space="preserve">
+    <value>عکس ها</value>
+  </data>
+  <data name="ProductName" xml:space="preserve">
+    <value>نام محصول</value>
+  </data>
+  <data name="CreateDate" xml:space="preserve">
+    <value>تاریخ ایجاد</value>
+  </data>
+  <data name="ModifeDate" xml:space="preserve">
+    <value>تاریخ اصلاح</value>
+  </data>
+  <data name="PictureName" xml:space="preserve">
+    <value>نام عکس</value>
+  </data>
+  <data name="ProductDetailId" xml:space="preserve">
+    <value>محصول</value>
+  </data>
+  <data name="SliderId" xml:space="preserve">
+    <value>عکس متحرک</value>
+  </data>
+  <data name="Add" xml:space="preserve">
+    <value>افزودن</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>حذف</value>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>ویرایش</value>
+  </data>
+  <data name="MaxLength1" xml:space="preserve">
+    <value>حداکثر {0}کاراکتر</value>
+  </data>
+  <data name="MaxLength30" xml:space="preserve">
+    <value>حداکثر {0}کاراکتر</value>
+  </data>
+  <data name="MaxLength50" xml:space="preserve">
+    <value>حداکثر {0}کاراکتر</value>
+  </data>
+  <data name="Save" xml:space="preserve">
+    <value>ثبت</value>
+  </data>
+  <data name="SetAddPicture" xml:space="preserve">
+    <value>افزودن عکس</value>
+  </data>
+  <data name="Close" xml:space="preserve">
+    <value>بستن</value>
+  </data>
+  <data name="DeleteText" xml:space="preserve">
+    <value>آیا اطلاعات خواسته شده حذف گردد؟</value>
+  </data>
+  <data name="Tools" xml:space="preserve">
+    <value>ابزار</value>
   </data>
 </root>
